<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.YoutubeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="7dp"
                    android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="@font/montserrat_bold"
                            android:hint="Video ID"
                            android:inputType="textUri"
                            android:textSize="16sp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/_start_"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="Start Test"
                            android:clickable="true"
                            app:cornerRadius="10dp"
                            android:backgroundTint="@color/colorPrimary"
                            android:onClick="onClick"/>

                </LinearLayout>


                <FrameLayout
                    android:name="com.google.android.youtube.player.YouTubePlayerSupportFragmentX"
                    android:id="@+id/youtube_player_"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="7dp"
                    android:layout_weight="8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="7dp"
                    android:layout_weight="1.5">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="0.5"
                                    android:fontFamily="@font/montserrat_bold"
                                    android:gravity="center"
                                    android:text="@string/time_to_1st_picture"
                                    android:textSize="10sp" />

                                <TextView
                                    android:id="@+id/tv_first"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/montserrat_bold"
                                    android:gravity="center"
                                    android:textSize="10sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="0.5"                                    android:fontFamily="@font/montserrat_bold"
                                    android:gravity="center"
                                    android:text="@string/video_load_delay"
                                    android:textSize="10sp" />

                                <TextView
                                    android:id="@+id/tv_load_delay"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/montserrat_bold"
                                    android:gravity="center"
                                    android:textSize="10sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:gravity="center"
                            android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="0.5"
                                    android:fontFamily="@font/montserrat_bold"
                                    android:gravity="center"
                                    android:text="@string/video_start_delay"
                                    android:textSize="10sp" />

                                <TextView
                                    android:id="@+id/tv_start_delay"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/montserrat_bold"
                                    android:gravity="center"
                                    android:textSize="10sp" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:gravity="center"
                            android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="0.5"
                                    android:fontFamily="@font/montserrat_bold"
                                    android:gravity="center"
                                    android:text="@string/buffering_count"
                                    android:textSize="10sp" />

                                <TextView
                                    android:id="@+id/tv_buff_count"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/montserrat_bold"
                                    android:gravity="center"
                                    android:textSize="10sp" />
                        </LinearLayout>

                </LinearLayout>



        </LinearLayout>
</FrameLayout>